# postcode-mcp

./: .gitignore  README.md  env.example  fastmcp.json  pyproject.toml  requirements.txt  run_http.py
.github/workflows/: deploy.yml
src/postcode_mcp/: __main__.py  server.py
src/postcode_mcp/app/: container.py  logger.py  settings.py
src/postcode_mcp/core/: errors.py  models.py  text.py
src/postcode_mcp/infra/: cache.py  http.py
src/postcode_mcp/infra/providers/: juso.py  juso_detail.py  juso_eng.py
src/postcode_mcp/services/: address_service.py  postcode_service.py
src/postcode_mcp/tools/: postcode_tools.py
tests/: test_postcode_tool.py
