[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postcode-mcp"
version = "0.1.0"
description = "FastMCP server: enrich places/addresses with 5-digit Korean postcode using Juso API"
requires-python = ">=3.11.8"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "cachetools>=5.3.3",
  "rapidfuzz>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/postcode_mcp"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-cachetools>=5.3.0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]
